# agent-skills

./: CHANGELOG.md  LICENSE  README.md  package.json
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
.github/: .release-manifest.json  CODEOWNERS  ci-tools.toml
.github/ISSUE_TEMPLATE/: bug.yml  improve-skill.yml  new-skill.yml
.github/workflows/: release-check.yml  release.yml  sync-skills.yml  version-sync.yml
docs/: changelog.yml
plugins/cloud/: skills
plugins/cloud/.claude-plugin/: plugin.json
plugins/elasticsearch/: skills
plugins/elasticsearch/.claude-plugin/: plugin.json
plugins/kibana/: skills
plugins/kibana/.claude-plugin/: plugin.json
plugins/observability/: skills
plugins/security/: skills
scripts/: generate-manifest.sh  generate-skill-table.py  install-skills.sh  release.py  setup-labels.sh
scripts/ci-tools/: README.md  pyproject.toml
scripts/ci-tools/src/ci_tools/: cli.py  settings.py
scripts/ci-tools/src/ci_tools/commands/github/: cli.py
scripts/ci-tools/src/ci_tools/commands/release/: cli.py  core.py  models.py
scripts/ci-tools/src/ci_tools/commands/sync/: cli.py  core.py  models.py
scripts/ci-tools/tests/: test_cli_top.py
scripts/ci-tools/tests/github/: test_cli.py
scripts/ci-tools/tests/release/: test_cli.py  test_core.py  test_models.py
scripts/ci-tools/tests/sync/: test_cli.py  test_core.py  test_models.py
scripts/lib/: frontmatter.py
scripts/release/: pyproject.toml
scripts/release/src/release/: cli.py  core.py
scripts/release/tests/: conftest.py  test_cli.py  test_core.py
(+15 files in other folders)
