[project]
name = "release"
version = "0.1.0"
description = "Extract release metadata from plugin.json and CHANGELOG.md"
authors = [
    { name = "Matt Devy", email = "matt.devy@elastic.co" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
release = "release.cli:main"

[dependency-groups]
dev = ["pytest"]

[build-system]
requires = ["uv_build>=0.9.4,<0.10.0"]
build-backend = "uv_build"
